# q3as-py

./: .gitignore  404.html  CHANGELOG.md  NOTICE  README.md  cog.toml  conftest.py  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: cd.yaml
0.1/: 404.html  index.html
0.1.0/: index.html  objects.inv
0.1.0/reference/q3as.algo/QAOA/: index.html
0.1.0/search/: search_index.json
0.1.1/reference/SUMMARY/: index.html
0.1.1/search/: search_index.json
0.1.3/: 404.html  index.html  objects.inv
0.1.3/search/: search_index.json
0.1/reference/app/: index.html
0.1/reference/client/: index.html
0.1/reference/quadratic/: index.html
0.1/reference/vqe/: index.html
0.1/search/: search_index.json
docs/: index.md
q3as/: __init__.py  api.py  client.py  convenience.py  encoding.py  estimator.py  optimizer.py  run_options.py
q3as/algo/: __init__.py  cutting.py  optimizer.py  types.py  vqe.py
q3as/app/: __init__.py  application.py  maxcut.py  qubo.py
q3as/encoding/: __init__.py  app.py  numpy.py  optimizer.py  qiskit.py  quadratic.py  vqe.py
q3as/quadratic/: __init__.py  infinity.py
q3as/quadratic/converters/: flip_problem_sense.py  inequality_to_equality.py  integer_to_binary.py  linear_equality_to_penalty.py  linear_inequality_to_penalty.py  quadratic_program_to_qubo.py
q3as/quadratic/problems/: __init__.py  linear_expression.py  quadratic_constraint.py  quadratic_expression.py  quadratic_objective.py  quadratic_program.py  quadratic_program_element.py  substitute_variables.py  types.py  variable.py
q3as/quadratic/translators/: __init__.py  ising.py  prettyprint.py
qaaas/: api.py  client.py
scripts/: gen_ref_pages.py
src/qaaas/: __init__.py
test/: test_benchmark.py  test_client.py  test_cutting.py  test_encoding.py  test_maxcut.py  test_quadratic.py  test_vqe.py
(+43 files in other folders)
