[project]
name = "q3as"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0", "pydantic>=2.9.1", "qiskit>=1.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["q3as"]

[tool.uv]
dev-dependencies = [
  "pytest-asyncio>=0.24.0",
  "pytest>=8.3.2",
  "qiskit-aer>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
