[project]
name = "q3as"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0", "pydantic>=2.9.1", "qiskit>=1.0.0"]

[project.urls]
Homepage = "https://q3as.aqora.io"
Documentation = "https://aqora-io.github.io/q3as-py"
Repository = "https://github.com/aqora-io/q3as-py"
Changelog = "https://github.com/aqora-io/q3as-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["q3as"]

[tool.uv]
dev-dependencies = [
  "mike>=2.1.3",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-material>=9.5.39",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.26.1",
  "pytest-asyncio>=0.24.0",
  "pytest>=8.3.2",
  "qiskit-aer>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
